25.2.2011 git
- added logic to save changes into tbscriptchangelog, if a script is edited or removed

24.2.2011 git
- bugfix: editing a script hijacked ownership of script to the submitting user
- dropped feature of editing script and increasing version number at the same time as it has some hidden
 consequences which could get dangerous (Hari suggestion as well).
- preparing data structure to record changes to scripts:

CREATE TABLE `tbscriptchangelog` (
  `id` int(11) NOT NULL auto_increment,
  `code` longtext collate latin1_general_ci NOT NULL,
  `module_id` int(11) NOT NULL,
  `versionnr` int(11) NOT NULL,
  `user_id` int(11) NOT NULL,
  `update_user` VARCHAR( 64 ) NULL,
  `script_id` int(11) NOT NULL,
  `create_dt` date NOT NULL,
  `comments` longtext collate latin1_general_ci,
  `title` varchar(64) collate latin1_general_ci default NULL,
  `isapackage` tinyint(1) NOT NULL default '0',
  `isaview` tinyint(1) NOT NULL default '0',
  PRIMARY KEY  (`id`)
) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci AUTO_INCREMENT=1; 
 

21.2.2011 git
- cosmetic changes (removed 'back to main menu' link where not needed, changed button text from 'Edit' to 'Save')

17.2.2011 git
- on user request (Hari): editing a script increases its version number

1.3.2 Release Notes 11.2.2011
This release reenables the upgrade from production to development schema, which was disabled in 1.3.1
 because the new algorithm in 1.3.0 some basic issues were found.
 
If you upgrade from version 1.3.1 or 1.3.0, you should launch this script on deltasql server schema:
ALTER TABLE tbscriptgeneration ADD  `exclbranch` tinyint(1) NOT NULL default '0';

11.2.2011 git
- reimplementing update from production schema (branch) to development schema (HEAD)
- added debug flag on dbsync.php to show debug information in synchronization script
- raised version to 1.3.2
- added one FAQ question on how to move between production and development schemas