@@ -1,7 +1,7 @@
 <?php session_start(); ?>
 <html> 
 <head>
-<title>deltasql - History</title>
+<title>deltasql - History of deleted scripts</title>
 <link rel="stylesheet" type="text/css" href="deltasql.css">
 </head>
 <body>
@@ -10,46 +10,34 @@ include("head.inc.php");
 include("utils/utils.inc.php");
 include("utils/constants.inc.php");
 
-$scriptid = $_GET['id'];
-$version  = $_GET['version'];
-$author   = $_GET['author'];
-$upuser   = $_GET['updateuser'];
-$updt     = $_GET['updatedt'];
-if ($scriptid=="") exit;
-
-echo "<h3>History for <a href=\"show_script.php?id=$scriptid\">script $version</a>";
+$rights = $_SESSION["rights"];
+if ($rights<3) die ("Not enough rights to see deleted scripts");
+echo "<h3>List of deleted scripts</h3>";
 
 include("conf/config.inc.php");
 mysql_connect($dbserver, $username, $password);
 @mysql_select_db($database) or die("Unable to select database");
 
-$query="SELECT * from tbscriptchangelog where script_id=$scriptid ORDER BY id DESC"; 
+$query="SELECT * from tbscriptchangelog where script_id NOT IN (select id from tbscript) ORDER BY id DESC"; 
 $result=mysql_query($query);  
 $num=mysql_numrows($result); 
 
 echo "
 <table border=\"1\">
 <tr>
-<th>description</th>
+<th>versionnr</th>
+<th>script</th>
+<th>comments</th>
 <th>update user</th>
 <th>create dt</th>
 <th>actions</th>
-<th>script</th>
-<th>comments</th>
 </tr>";
-echo "
-<tr>
-<td><b>Latest revision</b></td>
-<td>$upuser</td>
-<td>$updt</td>
-<td><a href=\"show_script.php?id=$scriptid\">Show</a><td>
-</tr>
-";
 
 $i=0;
 while ($i<$num) {  
 
 $id=mysql_result($result,$i,"id");
+$versionnr=mysql_result($result,$i,"versionnr");
 $update_user=mysql_result($result,$i,"update_user");          
 $create_dt=mysql_result($result,$i,"create_dt");
 $script=htmlentities(mysql_result($result,$i,"code"));
@@ -66,18 +54,14 @@ if (strlen($comments)>10) {
     $comments = "$comments<b>...</b>";
 }
 
-if ($update_user=="") { 
-  $description = "<b>Initial revision</b>";
-  $update_user=$author;
-} else $description = "";
 echo "
 <tr>
-<td>$description</td>
-<td>$update_user</td>
-<td>$create_dt</td>
-<td><a href=\"show_changelog_script.php?clid=$id&histid=$scriptid&version=$version\">Show</a></td>
+<td>$versionnr</td>
 <td>$scriptonlist</td>
 <td>$comments</td>
+<td>$update_user</td>
+<td>$create_dt</td>
+<td><a href=\"show_changelog_script.php?clid=$id\">Show</a></td>
 </tr>";
  $i++;
 }
@@ -85,6 +69,6 @@ echo "
 </table>
 <br>
 
-<a href="list_scripts.php">Back to List scripts</a>
+<a href="index.php">Back to main menu</a>
 </body>
 </html>
